--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "author": "virgaux",
   "license": "GPL-3.0",
   "dependencies": {
+    "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "dimas-kmeans": "^1.0.3",
     "dotenv": "^8.2.0",
     "hierarchical-clustering": "^1.1.0",
     "minimist": ">=1.2.3",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.0.3",
     "puppeteer": "^10.1.0",
-    "slimbot": "^5.1.0",
+    "telebot": "^1.4.1",
     "telegram-notify": "^1.3.2"
   },
   "repository": {
