--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "hierarchical-clustering": "^1.1.0",
     "minimist": ">=1.2.3",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-fetch": "^2.6.1",
     "pg": "^8.0.3",
     "puppeteer": "^10.1.0",
-    "telebot": "^1.4.1",
-    "telegram-notify": "^1.3.2"
+    "telebot": "^1.4.1"
   },
   "repository": {
     "type": "git",
