--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chalk": "^4.1.2",
     "dimas-kmeans": "^1.0.3",
     "dotenv": "^8.2.0",
+    "flatted": "^3.2.2",
+    "geoip-lite": "^1.4.2",
     "hierarchical-clustering": "^1.1.0",
     "minimist": ">=1.2.3",
     "moment": "^2.29.1",
@@ -21,7 +23,8 @@
     "node-fetch": "^2.6.1",
     "pg": "^8.0.3",
     "puppeteer": "^10.1.0",
-    "telebot": "^1.4.1"
+    "telebot": "^1.4.1",
+    "user-agents": "^1.0.800"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,5 @@
   "bugs": {
     "url": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile/issues"
   },
-  "homepage": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile#readme"
 }
