--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
+    "cross-fetch": "^3.1.4",
     "dimas-kmeans": "^1.0.3",
     "dotenv": "^8.2.0",
     "hierarchical-clustering": "^1.1.0",
@@ -33,6 +34,5 @@
   "bugs": {
     "url": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile/issues"
   },
-  "homepage": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/virgaux/ultimate-splinterlands-bot-mobile#readme"
 }
